# test

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  gh-pages.template.html  wasm.html
.github/workflows/: emscripten.yml
config/: config.yml  systems.yml
main/: main.cpp
src/boost/: CMakeLists.txt
src/core/: ServiceRegistry.cpp  ServiceRegistry.hpp
src/engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  EngineLifecycle.cpp  EngineLifecycle.hpp  EventEmitter.cpp  EventEmitter.hpp  Input.cpp  Input.hpp  Map.cpp  Map.hpp  MapImpl.cpp  MapImpl.hpp  ModuleDefine.hpp  ModuleLoader.hpp  ModuleRegistry.hpp  ModuleRegistryImpl.cpp  ModuleRegistryImpl.hpp  ServiceRegistry.cpp  ServiceRegistry.hpp  SokolStatus.hpp  System.cpp  System.hpp  SystemScheduler.cpp  SystemScheduler.hpp  WorldMapInstanceImpl.cpp  WorldMapInstanceImpl.hpp  hsv_rgb_conversion.cpp  hsv_rgb_conversion.hpp  log.hpp  noncopyable.hpp
src/engine-main/: CMakeLists.txt  InputImpl.cpp  InputImpl.hpp  SokolStatusImpl.hpp  engine-main.cpp  main.cpp
src/engine/components/: graphics.hpp  other.hpp  world.hpp
src/engine/helpers/: TimeMeter.hpp  sokol_log.cpp  sokol_log.hpp
src/engine/modules/: graphics.hpp  resource.hpp  sound.hpp
src/engine/modules/graphics/: components.hpp  components_private.hpp  graphics-define.cpp
src/engine/modules/graphics/systems/: RenderSokolBegin.cpp  RenderSokolBegin.hpp  RenderSokolDraw.cpp  RenderSokolDraw.hpp  RenderSokolEnd.cpp  RenderSokolEnd.hpp  SyncCameraWithMainWindow.cpp  SyncCameraWithMainWindow.hpp  TextureLoader.cpp  TextureLoader.hpp
src/engine/modules/resource/: components.hpp  resource-define.cpp
src/engine/modules/resource/services/: Loader.cpp  Loader.hpp
src/engine/modules/resource/systems/: ResourceLoader.cpp  ResourceLoader.hpp
src/engine/modules/sound/: components.hpp  define.cpp  define.hpp  sound-define.cpp
src/engine/service/: EngineLifecycle.cpp  EngineLifecycle.hpp
src/engine/systems/: InputQEScaleController.cpp  InputQEScaleController.hpp  InputWASDPositionController.cpp  InputWASDPositionController.hpp  MapSystems.cpp  RenderSokolBegin.cpp  RenderSokolBegin.hpp  RenderSokolDraw.cpp  RenderSokolDraw.hpp  RenderSokolEnd.cpp  RenderSokolEnd.hpp  SyncCameraWithMainWindow.cpp  SyncCameraWithMainWindow.hpp  UpdateBBox.cpp  UpdateBBox.hpp  UpdateMap.cpp  UpdateMap.hpp  simple_systems.cpp  simple_systems.hpp
src/main/: CMakeLists.txt  main.cpp
src/sokol/: CMakeLists.txt
src/wip/: CMakeLists.txt  main.cpp  wip-main.cpp
